UV index is completely working, my for loop overlapped on colors. Now I am working on getting my icon to work correctly and showing the date. Hope to get to the 5 day forecast soon.

--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@
     color: white;
     display: inline;
 }
-img{
-    float: left;
-}
+
+
 h1 {
     text-align: left;
     font-size: 3rem;
@@ -38,46 +37,50 @@ h4{
     text-align: left;
 }
 h5{
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin: 0;
     padding: 10px;
     text-align: left;
     margin-left: 17px;
+    width: 10vw;
+-moz-border-radius: 10px;
+-webkit-border-radius: 10px;
+-o-border-radius: 10px;
+-ms-border-radius: 10px;
+border-radius: 10px;
 }
 
 .container-main{
     text-align: left;
     width: 100vw;
-    height: 50vh;
+    height: auto;
     border: 1px solid black;
     margin: 0 auto;
     background-color: transparent;
     padding-right: 350px;
     padding-left: 30px;
     padding-top: 0px;
+    padding-bottom: 30px;
 }
 .low{
-    background-color: green;
-    color: white;
-    width: 15vw;
+    background-color: lightgreen;
+    color: black;
 }
 .moderate{
-    background-color: yellow;
+    background-color: rgb(250, 240, 127);
     color: black;
-    width: 15vw;
 }
 .high{
-    background-color: orange;
+    background-color: rgb(244, 149, 112);
     color: black;
-    width: 20px;
 }
 .vhigh{
-    background-color: red;
-    color: white;
+    background-color: rgb(248, 107, 107);
+    color: black;
 }
 .extreme{
-    background-color: purple;
-    color: white;
+    background-color: rgb(244, 193, 244);
+    color: black;
 }
 
 
